[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://ui/windows/lantana_16x9.gd" type="Script" id=2]
[ext_resource path="res://ui/dia_screens/dai_theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/windows/pin.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/lantana.svg" type="Texture" id=5]
[ext_resource path="res://ui/windows/cursorLayer.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "welcome"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("loading:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("loading:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.7, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "switch_screens"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("loading/logo:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3, 0.7, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.01, 0.01 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.01, 0.01 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("loading/logo:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3, 0.7, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 400, 225 ), Vector2( 400, 225 ), Vector2( 400, 225 ), Vector2( 400, 225 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("loading/logo:rotation_degrees")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.3, 0.7, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 82.5, 0.0, 0.0, -123.8 ]
}

[node name="lantana_16x9" type="Control"]
margin_right = 800.0
margin_bottom = 450.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="access" type="Panel" parent="."]
margin_left = 1.0
margin_right = 801.0
margin_bottom = 450.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="access"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -345.509
margin_top = -171.957
margin_right = -145.509
margin_bottom = 28.0425
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="humanName" type="Label" parent="access"]
margin_left = 37.1606
margin_top = 287.576
margin_right = 823.161
margin_bottom = 319.576
text = "ReadableName"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="username" type="Label" parent="access"]
margin_left = 37.1606
margin_top = 319.576
margin_right = 147.161
margin_bottom = 351.576
text = "Username"

[node name="pin_pad" parent="access" instance=ExtResource( 4 )]
margin_left = 551.0
margin_top = 70.6353
margin_right = -49.0
margin_bottom = -79.3647

[node name="loading" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.0287844 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="Sprite" parent="loading"]
position = Vector2( 400, 225 )
rotation = 1.41742
scale = Vector2( 0.0254551, 0.0254551 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="loading"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -79.3647
margin_right = 60.0
margin_bottom = -47.3647
text = "LOADING..."

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/welcome = SubResource( 1 )

[node name="cursorLayer" parent="." instance=ExtResource( 6 )]

[connection signal="pin_approved" from="access/pin_pad" to="." method="_on_pin_approved"]
